--- a/package.json
+++ b/package.json
@@ -2,11 +2,9 @@
   "name": "mealfit-back",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/app.ts",
   "scripts": {
-    "build": "tsc",
-    "start": "node dist/app.js",
-    "dev": "nodemon src/app.ts"
+    "dev": "tsx watch ./src/app.ts"
   },
   "repository": {
     "type": "git",
@@ -24,8 +22,7 @@
   "devDependencies": {
     "@types/express": "^4.17.20",
     "@types/node": "^20.8.10",
-    "nodemon": "^3.0.1",
-    "ts-node": "^10.9.1",
+    "tsx": "^4.1.0",
     "typescript": "^5.2.2"
   }
 }
