--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "src/app.ts",
   "scripts": {
-    "dev": "tsx watch ./src/server.ts"
+    "start": "ts-node src/server.ts",
+    "dev": "nodemon src/server.ts"
   },
   "repository": {
     "type": "git",
@@ -17,11 +18,16 @@
   },
   "homepage": "https://github.com/IPtitLu/MealFit-back#readme",
   "dependencies": {
-    "express": "^4.18.2"
+    "bcrypt": "^5.1.1",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "mongoose": "^8.0.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.20",
     "@types/node": "^20.8.10",
+    "nodemon": "^3.0.2",
+    "ts-node": "^10.9.1",
     "tsx": "^4.1.0",
     "typescript": "^5.2.2"
   }
