--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "src/app.ts",
   "scripts": {
+    "start": "node ./dist/server.js --env=production",
+    "build": "tsc --allowJs -p .",
     "dev": "tsx watch ./src/server.ts"
   },
   "repository": {
