--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongoose": "^8.0.2"
+    "mongoose": "^8.0.2",
+    "ofetch": "^1.3.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.20",
