--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.2",
+    "morgan": "^1.10.0",
     "ofetch": "^1.3.3"
   },
   "devDependencies": {
