--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.2",
     "morgan": "^1.10.0",
-    "ofetch": "^1.3.3"
+    "ofetch": "^1.3.3",
+    "redis": "^4.6.11"
   },
   "devDependencies": {
     "@types/express": "^4.17.20",
